--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,8 +1,9 @@
 ---
 navTitle: 'Home'
+type: 'page'
 ---
 
-# Content Wind :icon{name="carbon:sailboat-coastal" class="text-indigo-400"}
+# Home :icon{name="carbon:sailboat-coastal" class="text-indigo-400"}
 
 A lightweight Nuxt template to build a Markdown driven website, based on [Nuxt Content](https://content.nuxtjs.org), [TailwindCSS](https://tailwindcss.com) and [Iconify](https://iconify.design) :sparkles:
 
